/*
 * This file was generated by the Gradle 'init' task.
 */

plugins {
    id 'java'
    id 'maven-publish'
}

repositories {
    maven {
        url = uri("https://repo.papermc.io/repository/maven-public/")
    }
    mavenCentral()
}

dependencies {
    compileOnly "io.papermc.paper:paper-api:1.17.1-R0.1-SNAPSHOT"
    compileOnly "org.jetbrains:annotations:22.0.0"
}

java {
    toolchain.languageVersion.set(JavaLanguageVersion.of(17))
}

group = 'org.yingye'
version = '0.1.6'
description = 'SimpleCommandSet'

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

task fatJar(type: Jar) {
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
    from { configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) } }
    with jar
}

